# tiny_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera.h  compile_commands.json  example.cpp  main.cpp  roadmap  wiki.md
assets/shaders/: frag.spv
core/: \  core.cpp  core.h
error_handler/: error_handler.cpp  error_handler.h
include/: tiny_gltf.h  vk_mem_alloc.h
renderer/: renderer.cpp  renderer.h  renderer_util.cpp  renderer_util.h
renderer/shaders/: default_shader.frag  default_shader.vert  frag.spv  shadow.vert  vert.spv
scene/: scene.cpp  scene.h
tiny_engine_assets/shaders/: frag.spv  shadow.spv
window/: window.cpp  window.h
